--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -57,19 +57,24 @@ h6 {
   color: var(--primaryColor);
   text-decoration: underline;
   text-decoration-color: var(--secondaryColor);
-  text-underline-offset: 1rem;
+  text-underline-offset: 0.5rem;
   text-decoration-thickness: 0.2rem;
+
+  @media screen and (min-width: 768px) {
+    text-underline-offset: 1rem;
+  }
 }
 
 .feature-title-photo {
   color: var(--whiteColor);
   text-decoration: underline;
   text-decoration-color: var(--secondaryColor);
-  text-underline-offset: 1rem;
+  text-underline-offset: 0.5rem;
   text-decoration-thickness: 0.2rem;
 
   @media screen and (min-width: 768px) {
     color: var(--primaryColor);
+    text-underline-offset: 1rem;
   }
 }
 
@@ -198,9 +203,32 @@ textarea {
     opacity: 0.25;
   }
 
-  & > * {
+  & > *:not(.absolute) {
     position: relative;
     z-index: 1;
+  }
+}
+
+.black-shade {
+  @media screen and (max-width: 768px) {
+    position: relative;
+    z-index: 0;
+
+    &::after {
+      content: "";
+      position: absolute;
+      top: 0;
+      left: 0;
+      height: 100%;
+      width: 100%;
+      background-color: var(--blackColor);
+      opacity: 0.15;
+    }
+
+    & > *:not(.absolute) {
+      position: relative;
+      z-index: 1;
+    }
   }
 }
 
@@ -239,14 +267,16 @@ textarea {
 
 .link-underline,
 .link-underline-animate,
-.link-underline-active {
+.link-underline-active,
+.link-underline-alternate {
   position: relative;
   padding-bottom: 0.25rem;
 }
 
 .link-underline::before,
 .link-underline-animate::before,
-.link-underline-active::before {
+.link-underline-active::before,
+.link-underline-alternate::before {
   content: "";
   position: absolute;
   left: 0;
@@ -257,6 +287,10 @@ textarea {
   transform: scaleX(0);
   transform-origin: center right;
   transition: transform 0.3s ease-in-out;
+}
+
+.link-underline-alternate::before {
+  background-color: var(--primaryColor);
 }
 
 .link-underline-animate {
@@ -275,7 +309,8 @@ textarea {
 }
 
 .link-underline:hover::before,
-.link-underline-active::before {
+.link-underline-active::before,
+.link-underline-alternate:hover::before {
   transform: scaleX(1);
   transform-origin: center left;
   transition: transform 0.3s ease-in-out;
@@ -284,6 +319,10 @@ textarea {
 .link-hover-animated {
   transform: translateY(0);
   animation: hover infinite 1.5s;
+}
+
+.decoration-secondary {
+  text-decoration-color: var(--secondaryColor);
 }
 
 * {
@@ -317,6 +356,27 @@ textarea {
 
   h6 {
     font-size: 1.25rem;
+  }
+}
+
+.hover-text-white {
+  &:hover {
+    h1,
+    h2,
+    h3,
+    h4,
+    h5,
+    h6 {
+      color: var(--whiteColor);
+    }
+  }
+}
+
+.burger-menu {
+  svg {
+    height: 2rem;
+    width: 2rem;
+    min-width: 2rem;
   }
 }
 
@@ -377,14 +437,18 @@ textarea {
   max-width: 200px;
 }
 
-// Splide carousel styles 
+// Splide carousel styles
 
 .splide {
   padding: 0 2rem;
 }
 
-.carousel-arrows {
+.splide__arrow--next.carousel-next {
+  right: 0;
+}
 
+.splide__arrow--prev.carousel-prev {
+  left: 0;
 }
 
 .carousel-arrow.splide__arrow {
