--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -252,7 +252,20 @@ textarea {
 .white-shade--full {
   &::after {
     background-color: var(--whiteColor);
-    opacity: 0.1;
+  }
+}
+
+.hero-shade {
+  &::after {
+    @media screen and (min-width: 768px) {
+      border-radius: 0 0 500px 0;
+    }
+  }
+}
+
+.rounded-br-special {
+  @media screen and (min-width: 768px) {
+    border-radius: 0 0 500px 0;
   }
 }
 
