--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -144,13 +144,49 @@ textarea {
   }
 }
 
-.scroll-down {
+.scroll-down,
+.back-button {
   font-family: "Cinzel", serif;
+}
+
+.back-button {
+  padding-bottom: 0.25rem;
+
+  &::before {
+    content: "";
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    height: 2px;
+    background-color: var(--transparent);
+    transform-origin: center right;
+    transition: transform 0.3s ease-in-out;
+  }
+
+  &:hover {
+    &::before {
+      background-color: var(--secondaryColor);
+    }
+  }
 }
 
 .scroll-up {
   font-family: "Cinzel", serif;
   right: 0.5rem;
+  color: var(--whiteColor);
+
+  &:hover,
+  &.chameleonText,
+  &.chameleonText:hover {
+    p {
+      color: var(--secondaryColor);
+    }
+
+    svg {
+      fill: var(--secondaryColor);
+    }
+  }
 
   @media screen and (min-width: 768px) {
     right: 1.25rem;
@@ -253,6 +289,10 @@ textarea {
 }
 
 .black-shade {
+  &::after {
+    opacity: 0.3;
+  }
+
   @media screen and (min-width: 768px) {
     &::after {
       display: none;
